# pi2open

./: .editorconfig  .gitignore  LICENSE  README.md  main.py  openshock.py  pyproject.toml  requirements.txt  setupCert.bat
src/: main.py
